--- a/homepage/templates/app.homepage.index.html
+++ b/homepage/templates/app.homepage.index.html
@@ -6,34 +6,10 @@
   </div>
 </div>
 </div>
-<div class="container-fluid" style="min-height:30vh;">
-  <div class="col-md-12 text-center min_padd">
-    <span class="heading_big">Know why we are best</span><br>
-    <span class="heading_small">LEARNING VIA APP NEVER GETS EASIER</span>
-  </div>
-  <div class="owl_div">
-    <div class="owl_container">
-      <div class="owl owl-start">
-        <h5 class="text-muted" id="owltext0" ng-mouseover="onHover(0)" ng-mouseleave="offHover(0)"> <b>Creating a better Future for you</b> </h5>
-        <div class=" owl_point" id="owlpoint0" ng-mouseover="onHover(0)" ng-mouseleave="offHover(0)"></div>
-        <div class="owl_line_left"></div>
-      </div>
-      <div class="owl owl-center">
-        <h5 class="text-muted" id="owltext1" ng-mouseover="onHover(1)" ng-mouseleave="offHover(1)"> <b>Learn why elearny is best</b> </h5>
-        <div class="owl_point" id="owlpoint1" ng-mouseover="onHover(1)" ng-mouseleave="offHover(1)"></div>
-      </div>
 
-      <div class="owl owl-end">
-        <h5 class="text-muted" id="owltext2" ng-mouseover="onHover(2)" ng-mouseleave="offHover(2)"> <b>Our simple & Effective Process</b> </h5>
-        <div class="owl_point" id="owlpoint2" ng-mouseover="onHover(2)" ng-mouseleave="offHover(2)"></div>
-        <div class="owl_line_right"></div>
-      </div>
-    </div>
-  </div>
-</div>
 <div class="container-fluid" style="min-height:40vh;">
   <div class="col-md-11 col-md-offset-1">
-    <div class="col-md-3 col-md-offset-1"style="padding:20px 0px">
+    <div class="col-md-3 col-md-offset-1" style="padding:20px 0px">
       <h1 class="heading_medium">The Prodigious eLearning Courses for you</h1>
       <span class="u_line"></span>
       <div class="text-muted min_padd ">
@@ -55,7 +31,7 @@
   </div>
 </div>
 <div class="container-fluid" style="min-height:38vh;background-color:rgba(238, 238, 238, 0.46);margin:20px auto;position:relative;">
-  <img src="/static/images/24tut/bg_left.png" class="bg on_left hidden-xs hidden-sm" >
+  <img src="/static/images/24tut/bg_left.png" class="bg on_left hidden-xs hidden-sm">
   <img src="/static/images/24tut/bg_right.png" class="bg on_right hidden-xs hidden-sm">
   <div class="col-md-8 col-md-offset-2">
     <div class="col-md-3 text-center card_div">
@@ -135,7 +111,7 @@
         <div class="course_card_img" style="background-image:url('/static/images/24tut/img2.jpg')"></div>
         <div class="col-md-10 text-center">
           <h4>James Stewart</h4>
-          <h3>Language Learning (15Day) Crash Course</h3>
+          <h3>Language Learning Crash Course</h3>
           <div class="row">
             <i class="fa fa-star starf" aria-hidden="true"></i>
             <i class="fa fa-star starf" aria-hidden="true"></i>
@@ -390,14 +366,38 @@
     <h1 class="heading_big">A New Era in Online Education</h1>
     <h4 class="heading_small"> CASE STUDIES FOR YOU</h4>
   </div>
-  <div class="col-md-7 col-md-offset-3 min_padd">
+  <div class="col-md-8 col-md-offset-2 min_padd">
     <div class="col-md-6 min_padd">
       <div class="container-fluid no_padding" style="position:relative;">
-        <img src="/static/images/24tut/blue.png" style="position:absolute;top:75px;left:-35px;"class="hidden-xs hidden-sm">
+        <img src="/static/images/24tut/blue.png" style="position:absolute;top:75px;left:-35px;" class="hidden-xs hidden-sm">
         <img src="/static/images/24tut/liblue.png" style="position:absolute;top:-23px;right:24px;">
         <div class="onplay" style="background-image: url('/static/images/24tut/tutbg.jpg');">
           <div class="onplay_overlay" ng-click="">
-            <span class="playerbtn"><img src="/static/images/24tut/play.svg" width="30%"> </span>
+            <span class="playerbtn">
+                <svg x="0" y="0" width="60px" height="60px" viewBox="0 0 200 200" class="play play--ripple">
+                  <circle fill="transparent" stroke="#02EBA3" stroke-width="0" cx="100" cy="100" r="96"></circle>
+                  <circle clip-path="url(#clipper)" fill="url(#ripple)" cx="100" cy="100" r="130"></circle>
+                  <polygon fill="#02EBA3" points="70.993,60.347 153.398,102.384 70.993,144.42   "></polygon>
+                </svg>
+                <svg x="0" y="0" width="0" height="0">
+                  <defs>
+                    <clipPath id="clipper">
+                      <circle cx="100" cy="100" r="93"></circle>
+                    </clipPath>
+                    <radialGradient id="ripple">
+                      <stop offset="0.681994" stop-color="#000" stop-opacity="0.45">
+                        <animate attributeName="offset" values="0;0.70" begin="0.2s" dur="2.1s" repeatCount="indefinite"></animate>
+                      </stop>
+                      <stop offset="0.0986606" stop-color="#02EBA3" stop-opacity="0.55">
+                        <animate attributeName="offset" values="0.05;0.75" begin="0" dur="2.1s" repeatCount="indefinite"></animate>
+                      </stop>
+                      <stop offset="0.162564" stop-color="#000" stop-opacity="0.45">
+                        <animate attributeName="offset" values="0.10;1" begin="0" dur="2.1s" repeatCount="indefinite"></animate>
+                      </stop>
+                    </radialGradient>
+                  </defs>
+                </svg>
+            </span>
           </div>
         </div>
         <div class="min_padd">
@@ -411,10 +411,34 @@
     <div class="col-md-6 min_padd">
       <div class="container-fluid no_padding" style="position:relative;">
         <img src="/static/images/24tut/green.png" style="position:absolute;top:70px;left:-35px;" class="hidden-xs hidden-sm">
-        <img src="/static/images/24tut/orange.png" style="position:absolute;bottom:99px;right:-10px;">
+        <img src="/static/images/24tut/orange.png" class="orng_img">
         <div class="onplay" style="background-image: url('/static/images/24tut/img1.jpeg');">
           <div class="onplay_overlay" ng-click="">
-            <span class="playerbtn"> <img src="/static/images/24tut/play.svg" width="30%"> </span>
+            <span class="playerbtn">
+                <svg x="0" y="0" width="60px" height="60px" viewBox="0 0 200 200" class="play play--ripple">
+                  <circle fill="transparent" stroke="#02EBA3" stroke-width="0" cx="100" cy="100" r="96"></circle>
+                  <circle clip-path="url(#clipper)" fill="url(#ripple)" cx="100" cy="100" r="130"></circle>
+                  <polygon fill="#02EBA3" points="70.993,60.347 153.398,102.384 70.993,144.42   "></polygon>
+                </svg>
+                <svg x="0" y="0" width="0" height="0">
+                  <defs>
+                    <clipPath id="clipper">
+                      <circle cx="100" cy="100" r="93"></circle>
+                    </clipPath>
+                    <radialGradient id="ripple">
+                      <stop offset="0.681994" stop-color="#000" stop-opacity="0.45">
+                        <animate attributeName="offset" values="0;0.70" begin="0.2s" dur="2.1s" repeatCount="indefinite"></animate>
+                      </stop>
+                      <stop offset="0.0986606" stop-color="#02EBA3" stop-opacity="0.55">
+                        <animate attributeName="offset" values="0.05;0.75" begin="0" dur="2.1s" repeatCount="indefinite"></animate>
+                      </stop>
+                      <stop offset="0.162564" stop-color="#000" stop-opacity="0.45">
+                        <animate attributeName="offset" values="0.10;1" begin="0" dur="2.1s" repeatCount="indefinite"></animate>
+                      </stop>
+                    </radialGradient>
+                  </defs>
+                </svg>
+            </span>
           </div>
         </div>
         <div class="min_padd">
