--- a/homepage/templates/header.html
+++ b/homepage/templates/header.html
@@ -1,24 +1,21 @@
 {% load i18n %}
 
-<nav class="navbar navbar-default navbar-fixed-top" style="background-color:#222222;border:0px solid #222222;padding:10px;">
+<nav class="navbar navbar-default navbar-fixed-top" style="background-color:#222222;border:0px solid #222222;min-height:40px;">
   <div class="container">
     <!-- Brand and toggle get grouped for better mobile display -->
     {% verbatim %}
-    <div class="col-md-12" style="border-bottom:1px solid #656565;padding:3px;">
+    <!-- <div class="col-md-12" style="border-bottom:1px solid #656565;padding:3px;">
       <div class=""style="color:#656565">
         <i class="fa fa-facebook-square fa-fw" aria-hidden="true"></i>
         <i class="fa fa-youtube-play fa-fw" aria-hidden="true"></i>
-        <!-- <i class="fa fa-twitter fa-fw" aria-hidden="true"></i>
-        <i class="fa fa-google fa-fw" aria-hidden="true"></i> -->
         <div class="pull-right">
-          <span><i class="fa fa-key fa-fw" aria-hidden="true"></i>Sign in</span>&emsp;
+          <span><i class="fa fa-key fa-fw" aria-hidden="true"></i>Sign in</span>
           <span><i class="fa fa-user-plus fa-fw" aria-hidden="true"></i>Register</span>
          </div>
       </div>
-
-    </div>
+    </div> -->
     <div class="navbar-header" style="padding-top:7px;">
-      <a class="navbar-brand" href="/" style="padding:0px;"> <img src="/static/images/24tut/icon_grad.svg" height="75%"> </a>
+      <a class="navbar-brand" href="/" style="padding:0px;"> <img src="/static/images/24tut/icon_grad.svg" height="100%"> </a>
 
       <div class="navbar-toggle toggleBtn" data-toggle="collapse" data-target="#myNavbar" ng-click="toggleNavbar = !toggleNavbar" style="border:none;">
         <span class="icon-bar"></span>
@@ -59,7 +56,7 @@
         <li class="header_element">
           <a href="" ng-mouseleave="show[1]=false" ng-mouseover="show[1]=true" class="nav_ele"> Blogs</a>
         </li>
-        <li class="header_element">
+        <!-- <li class="header_element">
           <a href="" ng-mouseleave="show[3]=false" ng-mouseover="show[3]=true" style="color:#fff;">About Us</a>
           <ul ng-mouseleave="keepshow[3]=false" ng-click="keepshow[3] = false; toggleNavbar = false;" ng-mouseover="keepshow[3]=true" ng-show="show[3]||keepshow[3]" class="container_box">
             <li><a href="/enroll">Enroll</a></li>
@@ -67,6 +64,9 @@
             <li><a href="/testimonials">Our Testimonials</a></li>
             <li><a href="/contact">Contact Us</a></li>
           </ul>
+        </li> -->
+        <li class="header_element">
+          <a href="" ng-mouseleave="show[4]=false" ng-mouseover="show[4]=true" style="color:#fff;"><i class="fa fa-key fa-fw" aria-hidden="true"></i>Sign in</a>
         </li>
       </ul>
     </div>
