--- a/homepage/templates/index.html
+++ b/homepage/templates/index.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %} {% load staticfiles %} {% block specific_head %}
-<title>CIOC</title>
+<title>24tutors</title>
 <base href="/">
 {% endblock %} {% block specific_css %}
 <link rel="stylesheet" href="{% static 'css/animate.css' %}" charset="utf-8">
