--- a/homepage/templates/refund.html
+++ b/homepage/templates/refund.html
@@ -1,33 +1,11 @@
-{% extends "base.html" %} {% load staticfiles %} {% block specific_head %}
-<title>CIOC</title>
-{% endblock %} {% block specific_css %}
-<link href="{% static 'css/agency.css' %}" rel="stylesheet">
-<link rel="stylesheet" href="{% static 'css/animate.css' %}" charset="utf-8"> {% endblock %} {% block header %}
-
-{% include "header.html" %}
-
-{% endblock %}
-<!-- Header -->
-{% block content %}
-<div ng-app="app" ng-controller="main">
-  {% verbatim %}
-
-
-  <!--/chatbox-->
-
-
-
-
-  {% endverbatim %}
-  <!-- Services Section -->
-  <div class="body">
-    <div class="container" style="padding-left:0px;padding-right:0px;box-shadow: 0px 30px 50px 12px #d0d5dd;">
+<div class="body">
+    <div class="container" style="padding-left:0px;padding-right:0px;">
       <div class="container-fluid">
         <section>
           <div class="row text-center">
             <h2>Refund and Cancellation Policy </h2>
           </div>
-          <div class="container-fluid" style="margin-left:40px;padding:0px">
+          <div class="container-fluid" style="margin-left:40px;padding:0px;padding-bottom:20px;">
             <p>Our focus is complete customer satisfaction. In the event, if you are displeased with the services provided, we will refund back the money, provided the reasons are genuine and proved after investigation. Please read the fine prints of each deal before buying it, it provides all the details about the services or the product you purchase.<br> In case of dissatisfaction from our services, clients have the liberty to cancel their projects and request a refund from us. Our Policy for the cancellation and refund will be as follows:</p><br><br>
             <h4>Cancellation Policy</h4>
             <p>For Cancellations please contact the us via contact us link.<br>
@@ -44,26 +22,6 @@
           </div>
         </section>
       </div>
-
-      {% endblock %} {% block footer %}
-      {% include "footer.html" %}
-
     </div>
   </div>
 </div>
-
-
-
-
-{% endblock %} {% block specific_js %}
-<script src="{% static 'js/jquery.easing.min.js' %}"></script>
-<script src="{% static 'js/classie.js' %}"></script>
-<!-- <script src="{% static 'js/cbpAnimatedHeader.js' %}"></script> -->
-
-<script src="{% static 'js/agency.js' %}"></script>
-<script src="{% static 'js/angular.min.js' %}"></script>
-<script src="{% static 'js/angular-ui-router.min.js' %}"></script>
-<script src="{% static 'js/angular-sanitize.min.js' %}"></script>
-<script src="{% static 'js/app.homepage.js' %}"></script>
-
-{% endblock %}
