--- a/homepage/templates/career.html
+++ b/homepage/templates/career.html
@@ -1,19 +1,30 @@
-{% extends "base.html" %} {% load staticfiles %} {% block specific_head %}
-<title>CIOC</title>
-{% endblock %} {% block specific_css %}
-<link href="{% static 'css/agency.css' %}" rel="stylesheet">
-<link rel="stylesheet" href="{% static 'css/animate.css' %}" charset="utf-8"> {% endblock %} {% block header %}
+<title>Online tutoring jobs, Earn upto 50 thousands per month</title>
 
-{% include "header.html" %}
+<meta name="description" content="India's only 24x7 student helpline. Connect with the best tutors from IITs and NITs provide teaching for CBSE & ICSE, Maths & Science and competitive exams like  JEE Mains, JEE Advanced, IIT Foundation, Olympiads, NTSE, PSA"/>
+<link rel="canonical" href="https://24tutors.com/" />
+<link rel="publisher" href="https://plus.google.com/b/105723801328437605094/"/>
+<meta property="og:locale" content="en_US" />
+<meta property="og:type" content="website" />
+<meta property="og:title" content="Online live tutoring. Free 1-2-1 online classes. IIT JEE Preparation. School tutions online" />
+<meta property="og:description" content="India's only 24x7 student helpline. Connect with the best tutors from IITs and NITs provide teaching for CBSE & ICSE, Maths & Science and competitive exams like  JEE Mains, JEE Advanced, IIT Foundation, Olympiads, NTSE, PSA" />
+<meta property="og:url" content="https://24tutors.com" />
+<meta property="og:site_name" content="24 Tutors" />
+<meta property="og:updated_time" content="2018-04-01T07:17:53+00:00" />
+<meta property="og:image" content="https://24tutors.com/static/images/seo_tutor_common.png" />
+<meta property="og:image:secure_url" content="https://24tutors.com/static/images/seo_tutor_common.png" />
+<meta property="og:image:width" content="1333" />
+<meta property="og:image:height" content="745" />
+<meta name="twitter:card" content="summary" />
+<meta name="twitter:description" content="India's only 24x7 student helpline. Connect with the best tutors from IITs and NITs provide teaching for CBSE & ICSE, Maths & Science and competitive exams like  JEE Mains, JEE Advanced, IIT Foundation, Olympiads, NTSE, PSA" />
+<meta name="twitter:title" content="Online live tutoring. Free 1-2-1 online classes. IIT JEE Preparation. School tutions online" />
+<meta name="twitter:site" content="@tutors_24" />
+<meta name="twitter:image" content="https://24tutors.com/static/images/seo_tutor_common.png" />
+<meta name="twitter:creator" content="@tutors_24" />
 
-{% endblock %}
-<!-- Header -->
-{% block content %}
-
-<div ng-app="app" ng-controller="main">
-  <!-- Services Section -->
+<meta property="article:author" content="24Tutors.com" />
+<link rel="icon" href="/static/images/tutor.ico" type="image/gif" sizes="16x16">
   <div class="body" >
-    <div class="container" style="padding-left:0px;padding-right:0px;box-shadow: 0px 30px 50px 12px #d0d5dd;" >
+    <div class="container" style="padding-left:0px;padding-right:0px;" >
       <section id="careerservice">
         <div class="container-fluid" style="padding:0px;">
           <div class="career-media">
@@ -22,41 +33,33 @@
         </div>
       </section>
       <section style="padding: 0px 0;">
-        {% verbatim %}
         <div class="container-fluid" style="background-color:#fff;padding:20px;">
-          <div class="row">
-            <div class="col-md-12">
-              <p>The truth is that our finest moments are most likely to occur when we are feeling deeply uncomfortable, unhappy, or unfulfilled. For it is only in such moments, propelled by our discomfort, that we are likely to step out of our ruts and start searching for different ways or truer answers.</p><br><br>
-              <p>The truth is that our finest moments are most likely to occur when we are feeling deeply uncomfortable, unhappy, or unfulfilled. For it is only in such moments, propelled by our discomfort, that we are likely to step out of our ruts and start searching for different ways or truer answers.</p>
-            </div>
-          </div>
           <div class="row" >
             <div class="col-md-12">
-              <div class="job-header" style="font-size:15px;padding-top:15px">
-                <h5 style="text-transform:uppercase;color:rgb(16, 68, 106);">bangalore</h5><br>
+              <div class="job-header">
+                <h5 style="text-transform:uppercase;color:rgb(16, 68, 106);">bangalore</h5>
                 <ul class="row table-header hidden-xs" style="list-style-type:none;">
-                  <li class="col-md-3">Jobtype</li>
-                  <li class="col-md-3">Funtional Area</li>
-                  <li class="col-md-3">Role</li>
-                  <li class="col-md-3">Apply</li>
+                  <li class="col-md-3"> <strong>Role</strong> </li>
+                  <li class="col-md-3"> <strong>Funtional Area</strong> </li>
+                  <li class="col-md-3"><strong>Experience</strong> </li>
+                  <li class="col-md-3"></li>
                 </ul>
               </div>
-              <div class="job-section" style="margin-top:20px;font-size:15px;" >
-                <ul class="row job" style="list-style-type:none;margin-top:20px;" ng-repeat="i in jobs">
-                  <li class="col-md-3">{{i.jobtype}}</li>
-                  <li class="col-md-3">{{i.department__dept_name}}</li>
-                  <li class="col-md-3">{{i.role__name}}</li>
-                  <li class="col-md-3"><button type="button" class="btn btn-sm btn-default" ng-click="apply($index)" >Apply</button></li>
+              <div class="job-section" style="margin-top:20px">
+                <ul class="row job" style="list-style-type:none;">
+                  <li class="col-md-3">Backend Developer</li>
+                  <li class="col-md-3">Web Application Development</li>
+                  <li class="col-md-3">0-1 years</li>
                 </ul>
               </div>
-              <!-- <div class="job-section" style="margin-top:20px">
+              <div class="job-section" style="margin-top:20px">
                 <ul class="row job" style="list-style-type:none;">
                   <li class="col-md-3">Android Developer</li>
                   <li class="col-md-3">Web Application Development</li>
                   <li class="col-md-3">0-1 years</li>
 
                 </ul>
-              </div> -->
+              </div>
               <!-- <div id="demo2" class="collapse">
                 <div class="row">
                   <div class="col-md-12" style="margin-top:30px">
@@ -69,48 +72,22 @@
                   </div>
                 </div>
               </div> -->
-              <!-- <div class="job-section" style="margin-top:20px">
+              <div class="job-section" style="margin-top:20px">
                 <ul class="row job" style="list-style-type:none;">
                   <li class="col-md-3">Software Developer Intern(Frontend,Backend,Andriod)</li>
                   <li class="col-md-3">Web Application Development</li>
                   <li class="col-md-3">0-1 years</li>
                 </ul>
-              </div> -->
+              </div>
+              <div class="row" style="margin-top:20px">
+                <div class="col-md-12">
+                  <p>We're aggressively looking out for software engineers and interns. If you are looking for a fresher job in Bangalore or internship  in Bangalore please mail your resume and cover letter to <strong>jobs@cioc.in.</strong></p>
+                </div>
+              </div>
             </div>
           </div>
-
-
         </div>
-        {% endverbatim %}
-
       </section>
-
-
-
     </div>
   </div>
 </div>
-
-
-
-
-{% endblock %} {% block specific_js %}
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.0/angular.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/tinymce/4.3.4/tinymce.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.17/angular-ui-router.js"></script>
-
-<script src="{% static 'js/jquery.easing.min.js' %}"></script>
-<script src="{% static 'js/classie.js' %}"></script>
-<script src="{% static 'js/ui-bootstrap-tpls-0.14.3.min.js' %}"></script>
-<script src="{% static 'js/angular-bootstrap-confirm.min.js' %}"></script>
-<!-- <script src="{% static 'js/cbpAnimatedHeader.js' %}"></script> -->
-<script src="{% static 'js/tinymce.min.js' %}"></script>
-<script src="{% static 'js/agency.js' %}"></script>
-<script src="{% static 'js/angular.min.js' %}"></script>
-<script src="{% static 'js/angular-ui-router.min.js' %}"></script>
-<script src="{% static 'js/angular-sanitize.min.js' %}"></script>
-<script src="{% static 'js/app.homepage.js' %}"></script>
-<script src="{% static 'js/angular-flash.js' %}"></script>
-
-{% endblock %}
