--- a/homepage/templates/footer.html
+++ b/homepage/templates/footer.html
@@ -44,7 +44,6 @@
       </div>
       <div class="nc_links col-md-3">
         <ul class="list-unstyled">
-          <h4 class="text-muted"><b>NCERT Solutions</b></h4>
           <li><a href="">NCERT Class 11 Chemistry Solutions</a></li>
           <li><a href="">NCERT Class 11 Biology Solutions</a></li>
           <li><a href="">NCERT Class 10 Maths Solutions</a></li>
@@ -85,7 +84,7 @@
       <div class="col-md-4 col-sm-6 footer">
         <ul class="folist">
           <h4 class="text-muted">Links</h4>
-          <li><a href="">Courses</a></li>
+          <li><a href="/enroll">Courses</a></li>
           <li><a href="">Tutors</a></li>
           <li><a href="">Quiz & Tests </a></li>
           <li><a href="/testimonials">Our Testimonials </a></li>
@@ -112,10 +111,10 @@
     </div>
     <div class="container-fluid min_padd">
       <div class="col-md-12">
-        <div class="col-md-5 col-md-offset-1">
-          <h5 class="text-muted">Copyright 2018.All Righst Reserved</h5>
+        <div class="col-md-4 col-md-offset-1">
+          <span class="text-muted">Copyright 2018.All Righst Reserved</span>
         </div>
-        <div class="col-md-5 col-md-offset-1 copy_rights">
+        <div class="col-md-6 col-md-offset-1 copy_rights">
           <span class="text-muted" style="padding-right:20px;border-right:1px solid #aaa;"> <a href="/desclaimer"> Disclaimer and IP</a> </span>
           <span class="text-muted" style="padding-right:20px;padding-left:20px;"> <a href="/policy">Privacy Policy</a> </span>
           <span class="text-muted" style="border-right:1px solid #aaa;border-left:1px solid #aaa;padding-right:20px;padding-left:20px;"> <a href="/terms">Terms and Conditions</a> </span>
