--- a/homepage/static/css/homepage.css
+++ b/homepage/static/css/homepage.css
@@ -8,6 +8,22 @@
   position: relative;
 }
 
+.coll12 {
+  min-height: 60px;
+  visibility: visible;
+  opacity: 1;
+  overflow: hidden;
+  transition: all 0.5s ease;
+}
+
+.coll11 {
+  height: 0px;
+  visibility: hidden;
+  opacity: 0;
+  overflow: hidden;
+  transition: all 0.5s ease;
+}
+
 .container_box {
   position: absolute;
   top: 43px;
@@ -152,19 +168,17 @@
 }
 
 .list_container {
-  max-width: 35%;
+  max-width: 39%;
   margin-left: auto;
   margin-right: auto;
   display: block;
   padding-bottom: 0rem;
   position: absolute;
-  right: 17%;
+  right: 12%;
   top: 10%;
 }
 
 .list_head {
-  max-width: 24vw;
-  margin-left: 10px;
   margin-right: auto;
   display: block;
 }
@@ -186,6 +200,7 @@
   margin-bottom: 8px;
   padding-top: 1.2em;
   position: relative;
+  cursor: pointer;
 }
 
 .list_title {
@@ -226,7 +241,6 @@
 
 .owl {
   min-height: 8vh;
-  height: auto;
   margin-top: 0;
 }
 
@@ -294,7 +308,7 @@
 
 .card_container {
   background-color: transparent;
-  height: 25vh;
+  min-height: 25vh;
   border-radius: 6px;
   border-top-left-radius: 29px;
   padding-top: 40px;
@@ -360,7 +374,7 @@
 .course_card {
   border-top-left-radius: 0px;
   border-radius: 7px;
-  height: 45vh;
+  min-height: 45vh;
   padding: 0px;
   cursor: pointer;
 }
@@ -375,7 +389,7 @@
 }
 
 .course_card_img {
-  height: 22vh;
+  min-height: 22vh;
   background-repeat: no-repeat;
   background-size: cover;
   padding: 0px;
@@ -414,7 +428,7 @@
 .pro_card {
   border-top-left-radius: 0px;
   border-radius: 7px;
-  height: 40vh;
+  min-height: 40vh;
   padding: 0px;
   cursor: pointer;
   background-color: #fff;
@@ -422,7 +436,7 @@
 
 .hero_card {
   border-radius: 10px;
-  height: 40vh;
+  min-height: 40vh;
   padding: 0px;
   cursor: pointer;
   background-color: #f9f9f9;
@@ -538,8 +552,8 @@
 
 .onplay {
   background-size: cover;
-  height: 300px;
-  width: 450px;
+  min-height: 300px;
+  width: 540px;
   cursor: pointer;
   position: relative;
   border-radius: 7px;
@@ -553,8 +567,8 @@
   text-align: center;
   opacity: 0;
   cursor: pointer;
-  height: 300px;
-  width: 450px;
+  min-height: 300px;
+  width: 540px;
   border-radius: 7px;
 }
 
@@ -579,7 +593,7 @@
 
 .social_links {
   width: 40px;
-  height: 40px;
+  min-height: 40px;
   border-radius: 50%;
   padding: 12px;
   background-color: #6A7EF1;
@@ -594,6 +608,10 @@
 .cent_div {
   min-height: 60vh;
   background-size: cover;
+}
+
+.cent_head {
+  padding-top: 10rem;
 }
 
 .dash_container {}
@@ -749,6 +767,9 @@
 .nc_links li a {
   color: #fff;
 }
+.nc_links:nth-child(2){
+  margin-top: 89px;
+}
 
 .ncrt_cards {
   background-color: #fafafa;
@@ -766,12 +787,13 @@
   border-top-left-radius: 44px;
   border-top-right-radius: 10px;
 }
-.copy_rights a{
-  color:#222222;
+
+.copy_rights a {
+  color: #222222;
 }
 
 .c_div {
-  min-width:75%;
+  min-width: 75%;
   min-height: 25vh;
   border-top-left-radius: 44px;
   border-top-right-radius: 10px;
@@ -781,20 +803,21 @@
   position: relative;
 }
 
-.c_text{
+.c_text {
   position: absolute;
-  font-size:2em;
-  color:#fff;
+  font-size: 2em;
+  color: #fff;
   font-weight: bolder;
-  top:16%;
+  top: 16%;
   right: 8%;
 }
-.c_num{
+
+.c_num {
   position: absolute;
-  font-size:7em;
-  color:#fff;
+  font-size: 7em;
+  color: #fff;
   font-weight: bolder;
-  top:32%;
+  top: 32%;
   right: 8%;
 }
 
@@ -803,8 +826,9 @@
   box-shadow: 0px 0px 1px #ddd, 0 4px 20px #ccc;
   border-top-left-radius: 44px;
 }
+
 .ncrt_cards:hover .c_div {
-background-image: linear-gradient(rgba(26, 24, 24, 1), rgba(32, 32, 32, 1));
+  background-image: linear-gradient(rgba(26, 24, 24, 1), rgba(32, 32, 32, 1));
 }
 
 .sub_list {
@@ -836,7 +860,7 @@ hr {
 }
 
 .social_div {
-  width: 50%;
+  /* width: %; */
 }
 
 .foo_bar {
@@ -854,7 +878,7 @@ hr {
 .about_head {
   min-height: 44vh;
   margin: 20px auto;
-  background-size:cover;
+  background-size: cover;
   background-repeat: no-repeat;
 }
 
@@ -868,7 +892,7 @@ hr {
 
 .tell_abt {
   width: 105px;
-  height: 105px;
+  min-height: 105px;
   border-radius: 50%;
   position: absolute;
   top: 15%;
@@ -878,8 +902,8 @@ hr {
 .tell_abt_overlay {
   display: none;
   position: absolute;
-  left: 46px;
-  top: 24px;
+  left: 70px;
+  top: 22px;
 }
 
 .tell_card {
@@ -958,9 +982,16 @@ hr {
   border: 1px solid #f2f2f2;
   border-radius: 50%;
   width: 70px;
-  height: 70px;
+  min-height: 70px;
   display: grid;
   align-items: center;
+}
+
+.feature_title {
+  font-size: 1.2em;
+  font-weight: bolder;
+  font-family: sans-serif;
+  color: #000;
 }
 
 .min_space {
@@ -1026,7 +1057,7 @@ hr {
 
 .top h1::after {
   width: 3em;
-  height: 1em;
+  min-height: 1em;
   content: '';
   bottom: 0px;
   position: absolute;
@@ -1177,6 +1208,7 @@ hr {
   width: 1em;
   margin-left: -1em;
 }
+
 .courses1 ul {
   margin-top: 2em;
   list-style-type: none;
@@ -1501,13 +1533,101 @@ hr {
 .orng_img {
   position: absolute;
   bottom: 99px;
-  right: -15px;
+  right: 33px;
+}
+
+.col_hd_12 {
+  width: 84vw;
+  margin-left: 8%;
 }
 
 /* for normal screens ends here.... */
+@media only screen and (device-width : 1352px) and (device-height : 641px) {
+
+  /* non hd screens starts here */
+  .home_content {
+    padding-top: 6rem;
+  }
+
+  .card_div {
+    padding-top: 3em;
+  }
+
+  .card_container {
+    padding-top: 30px;
+  }
+
+  .list_container {
+    max-width: 46%;
+    right: 0%;
+  }
+
+  .course_contain_bg {
+    min-height: 96vh;
+  }
+
+  .course_contain_gradient {
+    min-height: 96vh;
+  }
+
+  .pro_card_div {
+    top: 159px;
+  }
+
+  .pro_card {
+    min-height: 47vh;
+  }
+
+  .onplay {
+    width: 445px;
+  }
+
+  .onplay_overlay {
+    width: 445px;
+  }
+
+  .social_div {
+    width: 60%;
+  }
+
+  .nc_links {
+    padding-right: 0px;
+  }
+
+  .col_hd_12 {
+    width: 100%;
+    margin-left: auto;
+  }
+
+  .hero_card {
+    min-height: 46vh;
+  }
+
+  .cent_head {
+    padding-top: 3em;
+  }
+
+  .tell_abt_overlay {
+    left: 53px;
+  }
+
+  .foo_bar {
+    padding-top: 30px;
+  }
+
+  /*  non hd screen ends here*/
+}
+
 @media screen and (min-width: 1850px) {
 
   /* for hd screens starts here.... */
+  .hd_screen {
+    max-width: 70vw;
+    margin-left: 14%;
+    padding-left: 3%;
+    padding-right: 3%;
+  }
+
   .tell_abt_overlay {
     left: 65px;
     top: 25px;
@@ -1521,10 +1641,27 @@ hr {
     top: 254px;
   }
 
+  .onplay {
+    width: 540px;
+  }
+
+  .onplay_overlay {
+    width: 540px;
+  }
+
   .orng_img {
     position: absolute;
     bottom: 99px;
-    right: 70px;
+    right: 0px;
+  }
+
+  .copy_rights {
+    padding-left: 13%;
+  }
+
+  .col_hd_12 {
+    width: 84vw;
+    margin-left: 8%;
   }
 
   /* for hd screens ends here.... */
@@ -1603,6 +1740,7 @@ hr {
     width: 1em;
     margin-left: -1em;
   }
+
   .video-border {
     margin-left: 33%;
   }
@@ -1867,17 +2005,23 @@ hr {
   }
 
   .card_container {
-    height: 40vh;
+    min-height: 40vh;
   }
 
   .course_card {
-    height: 52vh;
+    min-height: 52vh;
     margin-bottom: 1.5em;
+    border-top-left-radius: 40px;
+    box-shadow: 0px 10px 1px #ddd, 0 10px 20px #ccc;
+  }
+
+  .course_card_img {
+    border-top-left-radius: 40px;
   }
 
   .course_contain_bg {
-    background-size:cover;
-    min-height: 93vh;
+    background-size: cover;
+    min-height: 102vh;
     background-image: linear-gradient(rgba(233, 233, 233, 0.6), rgba(233, 233, 233, 0.6)), url('/static/images/24tut/tablet_stu.png');
   }
 
@@ -1892,21 +2036,21 @@ hr {
     max-width: 100%;
     margin-left: 12%;
     position: relative;
-  }
-
-
-  .list_head {
-    max-width: 100%;
+    min-height: 92vh;
   }
 
   .list {
     max-height: 9vh;
-    width: 93vw;
+    width: 86vw;
   }
 
   .list_title {
-    font-size: 1.2em;
+    font-size: 1em;
     padding: 1em;
+  }
+
+  .sym_plus {
+    font-size: 17px;
   }
 
   .list_body {
@@ -1927,7 +2071,9 @@ hr {
 
   .pro_card {
     margin-bottom: 10px;
-    height: 49vh;
+    min-height: 49vh;
+    border-top-left-radius: 40px;
+    box-shadow: 0px 0px 1px #ddd, 0 4px 20px #ccc;
   }
 
   .onplay {
@@ -1957,7 +2103,7 @@ hr {
   }
 
   .hero_card {
-    height: 48vh;
+    min-height: 48vh;
     margin-bottom: 15px;
   }
 
@@ -1967,7 +2113,6 @@ hr {
 
   .cent_div {
     min-height: 60vh;
-    background-size: 190% 100%;
   }
 
   .dash_container {
@@ -2020,6 +2165,27 @@ hr {
 
   .sub_list li a {
     font-size: 12px;
+  }
+
+  .copy_rights {
+    padding: 0px;
+    padding-top: 10px;
+  }
+
+  .col_hd_12 {
+    width: 100%;
+    margin-left: auto;
+  }
+
+  .feature_title {
+    font-size: 1em;
+  }
+
+  .feature_imgs {
+    width: 60px;
+    height: 60px;
+    min-height: 0px;
+    margin-bottom: 10px;
   }
 
   /* mobile screen size ends here.... */
@@ -2138,12 +2304,12 @@ hr {
   }
 
   .course_card {
-    height: 49vh;
+    min-height: 49vh;
     margin-bottom: 1.5em;
   }
 
   .course_card {
-    height: 45vh;
+    min-height: 45vh;
     margin-bottom: 1.5em;
   }
 
@@ -2192,11 +2358,14 @@ hr {
   .btmright {
     right: 51px;
   }
+
   .onplay {
-      width: 350px;
+    width: 350px;
   }
+
   .onplay_overlay {
-      width: 350px;
+    width: 350px;
   }
+
   /* for google pixel devices ends here */
 }
