--- a/HR/templates/app.user.resetPassword.html
+++ b/HR/templates/app.user.resetPassword.html
@@ -248,7 +248,7 @@
                                     <h3><a  style="color:rgb(41, 151, 230)" href={{link}}> Click Here </a>   <h3>
                                     <br><br>
                                     <h4>And</h4>
-                                    <h4><a  style="color:rgb(41, 151, 230)" href="https://bnistore.in"> Click Here to visit the new store</a>   <h4>
+                                    <h4><a  style="color:rgb(41, 151, 230)" href="{{siteAddress}}"> Click Here to visit the new store</a>   <h4>
 
                                     <p>Thanks and Happy new year again.<br>
                                     Team {{brandName}}</p>
