--- a/libreERP/templates/ngBase.html
+++ b/libreERP/templates/ngBase.html
@@ -252,17 +252,18 @@
       var wamp_prefix = '{{wamp_prefix}}'
       var BRAND_LOGO = "{{BRAND_LOGO}}";
       var BRAND_NAME = "{{BRAND_NAME}}";
-      var appps;
       var xhttp = new XMLHttpRequest();
-      xhttp.onreadystatechange = function() {
-          if (this.readyState == 4 && this.status == 200) {
-            var data = JSON.parse(this.responseText)
-            console.log(data,'777777777777777');
-            appps=data
-          }
-        }
-        xhttp.open('GET', '/api/ERP/application/' , true);
-        xhttp.send();
+      var MY_APPS= {{myapps | safe}};
+      var MY_MODULES= {{mymodules | safe}};
+      // xhttp.onreadystatechange = function() {
+      //     if (this.readyState == 4 && this.status == 200) {
+      //       var data = JSON.parse(this.responseText)
+      //       console.log(data,'777777777777777');
+      //       appps=data
+      //     }
+      //   }
+      //   xhttp.open('GET', '/api/ERP/application/' , true);
+      //   xhttp.send();
     </script>
     <script src="{% static 'js/custom/wampProcessors.js' %}"></script>
     <script src="{% static 'js/custom/nativeJS.js' %}"></script>
@@ -284,6 +285,9 @@
     {% endfor %}
     {% for m in modules %}
       <script src="{% static '' %}js/module.{{m.name}}.js"></script>
+    {% endfor %}
+    {% for m in myapps %}
+
     {% endfor %}
 
     <!-- <script src="https://app.syrow.com/script/chatter-E7eMhL9EbxtJnkeVtYjc58kmuwleT0Zu+WQEzsQCr6E=.js"></script> -->
